--- a/BELUMSIAP.html
+++ b/BELUMSIAP.html
@@ -5,7 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bersama Nobarkita21 Menunggu squid Game 3</title>
-
+  
+  <div class="music">
+         <audio src="sound/DJ CINTA DAN AIR MATA SIMPATIK MIDLE NULUP BASS BLAYER VIRAL TIKTOK.mp3" id="my_audio" loop="loop"></audio> 
+       </div>
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet"> 
