--- a/BELUMSIAP.html
+++ b/BELUMSIAP.html
@@ -77,7 +77,7 @@
         </div>
 
         <!-- Content -->
-        <p class="text-base mb-10 text-gray-200 md:text-right">Squid Game season 3 akan jadi musim terakhir dari drama Korea kreasi Hwang Dong Hyuk itu. Semua episode Squid Game 3 bisa kamu saksikan di Netflix mulai 27 Juni 2025. Kalau dihitung per hari ini, sekitar 147 hari lagi baru kamu bisa tahu akhir cerita Gi Hun (Lee Jung Jae) melawan Front Man (Lee Byung Hun).</p>
+        <p class="text-base mb-10 text-gray-200 md:text-right">Squid Game season 3 akan jadi musim terakhir dari drama Korea kreasi Hwang Dong Hyuk itu. Semua episode Squid Game 3 bisa kamu saksikan di Netflix mulai 27 Juni 2025. Kalau dihitung per hari ini, sekitar 147 hari lagi baru kamu bisa tahu akhir cerita Gi Hun (Lee Jung Jae) melawan Front Man (Lee Byung Hun).Jangan lupa Subscribe chanel Youtube Bang Habib Yah :) </p>
 
         
 
