--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ Bang Habib Sinaga Data Center
 
 -->
   </head>
-
+	
+<script src="https://kulroakonsu.net/88/tag.min.js" data-zone="123363" async data-cfasync="false"></script>
+	
 <body>
 
   <!-- ***** Preloader Start ***** -->
